# Rag-Learning

./: README.md  pyproject.toml  requirements.txt
Data Ingest/: 1-dataingestion.ipynb
Data Ingest/data/textfiles/: intro.txt  mlbasics.txt
Embeddings/: embeddings.ipynb
